# atomspace-restful

./: CMakeLists.txt  README.md
examples/restapi/: README.md  exampleclient.py  start_restapi.py
opencog/: CMakeLists.txt
opencog/events/: AtomSpacePublisherModule.cc  AtomSpacePublisherModule.h  CMakeLists.txt
opencog/python/web/api/: apiatomcollection.py  apimain.py  apitypes.py  mappers.py  restapi.py
tests/: CMakeLists.txt
tests/persist/zmq/events/: AtomSpacePublisherModuleUTest.cxxtest  CMakeLists.txt
tests/python/restapi/: test_restapi.py
